tests/neg/magic-offset-header-b.scala

def y: Int = false  // error
